fixing spacing issues by making everything bigger

--- a/app/assets/stylesheets/status.css
+++ b/app/assets/stylesheets/status.css
@@ -6,7 +6,7 @@ div.user-status {
   /*float: left;*/
   display:inline-block;
   overflow:hidden;
-  width: 255px;
+  width: 512px;
   height: 300px;
   border: 1px solid black;
 }
